# artifact-flow

./: .dockerignore  .env.example  .gitignore  404.html  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_cli.py  run_server.py  setup.py  sitemap.xml
api/: index.html
artifact_flow.egg-info/: PKG-INFO  SOURCES.txt
cli/: __init__.py  api_client.py  config.py  main.py  ui.py
deploy/: .env.intranet.example  .env.prod.example  Caddyfile  MIGRATION-project-name.md  MULTI-REPLICA.md  docker-compose.intranet.yml  docker-compose.sandbox.yml  entrypoint.sh  nginx.conf
deployment/: index.html
docs/: Agents模块使用指南.md  ArtifactFlow Agents模块使用指南.md  ArtifactFlow Core模块ID体系.md  ArtifactFlow Core模块设计与实施指南.md  ArtifactFlow已知问题清单.md  Multi-Agent研究系统设计提示词.md  Reverse engineering Claude Artifacts.md  Reverse engineering Claude Code.md  api.md  deployment.md  extension-guide.md  faq.md  frontend.md  index.md  request-lifecycle.md  streaming.md  基于Artifact的Multi-Agent研究系统设计方案.md  已知问题清单.md
extension-guide/: index.html
faq/: index.html
frontend/: Dockerfile  README.md  eslint.config.mjs  index.html  next.config.js  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
request-lifecycle/: index.html
sandbox/: Dockerfile  README.md  requirements.txt
sandbox/stub-pkg/: pyproject.toml
sandbox/stub-pkg/af_sandbox_stub/: __init__.py
scripts/: build-sandbox-image.sh  create_admin.py  export_openapi.py  release.sh  (+3 more)
(+596 files in other folders)
